--- a/app/src/main/res/layout/custom_listview_layout.xml
+++ b/app/src/main/res/layout/custom_listview_layout.xml
@@ -29,8 +29,10 @@
         android:layout_marginStart="15dp"
         android:layout_marginTop="0dp"
         android:layout_toEndOf="@+id/imageView2"
+        android:fontFamily="@font/montserrat"
         android:text="Activity:"
-        android:textColor="#6525D8"
+        android:textColor="#42210B"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
@@ -46,8 +48,10 @@
         android:layout_marginTop="4dp"
         android:layout_marginEnd="3dp"
         android:layout_toEndOf="@+id/imageView2"
+        android:fontFamily="@font/montserrat"
         android:text="Location:"
-        android:textColor="#6525D8"
+        android:textColor="#42210B"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
@@ -63,8 +67,10 @@
         android:layout_marginTop="4dp"
         android:layout_marginEnd="2dp"
         android:layout_toEndOf="@+id/imageView2"
+        android:fontFamily="@font/montserrat"
         android:text="Time Period:"
-        android:textColor="#6525D8"
+        android:textColor="#42210B"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
@@ -80,7 +86,9 @@
         android:layout_marginTop="3dp"
         android:layout_marginEnd="2dp"
         android:layout_toEndOf="@+id/imageView2"
+        android:fontFamily="@font/montserrat"
         android:text="TextView"
+        android:textColor="#A642210B"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
@@ -96,7 +104,9 @@
         android:layout_marginTop="2dp"
         android:layout_marginEnd="2dp"
         android:layout_toEndOf="@+id/imageView2"
+        android:fontFamily="@font/montserrat"
         android:text="TextView"
+        android:textColor="#A642210B"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
@@ -112,7 +122,9 @@
         android:layout_marginTop="3dp"
         android:layout_marginEnd="2dp"
         android:layout_toEndOf="@+id/imageView2"
+        android:fontFamily="@font/montserrat"
         android:text="TextView"
+        android:textColor="#A642210B"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
@@ -128,8 +140,10 @@
         android:layout_marginTop="2dp"
         android:layout_marginEnd="3dp"
         android:layout_toEndOf="@+id/imageView2"
+        android:fontFamily="@font/montserrat"
         android:text="Tags:"
-        android:textColor="#6525D8"
+        android:textColor="#42210B"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
@@ -145,7 +159,9 @@
         android:layout_marginTop="2dp"
         android:layout_marginEnd="3dp"
         android:layout_toEndOf="@+id/imageView2"
+        android:fontFamily="@font/montserrat"
         android:text="TextView"
+        android:textColor="#A642210B"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
