--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/logo"
+    android:background="@drawable/jiowherebg"
     tools:context=".ResetPasswordActivity">
 
     <LinearLayout
@@ -26,31 +26,42 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
+            android:fontFamily="@font/montserrat"
             android:text="Reset Password"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="#42210B"
+            android:textStyle="bold" />
 
         <EditText
             android:id="@+id/emailResetPW"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
+            android:fontFamily="@font/montserrat"
             android:hint="Enter your email address"
-            android:inputType="textEmailAddress" />
+            android:inputType="textEmailAddress"
+            android:textColor="#42210B" />
 
 
         <Button
             android:id="@+id/resetPwButton"
+            android:background="@drawable/custom_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
-            android:text="Reset Password now" />
+            android:fontFamily="@font/montserrat"
+            android:text="Reset Password now"
+            android:textColor="#42210B"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/SignInText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat"
             android:text="Already Registered? Sign in here"
             android:textAlignment="center"
-            android:textColor="#3F51B5" />
+            android:textColor="#42210B"
+            android:textStyle="bold" />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
