--- a/app/src/main/res/layout/activity_select_mrt_station.xml
+++ b/app/src/main/res/layout/activity_select_mrt_station.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bg5"
     tools:context=".SelectMrtStationActivity">
 
     <EditText
@@ -13,8 +14,10 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:ems="10"
+        android:fontFamily="@font/montserrat"
         android:hint="Enter Mrt Station"
         android:inputType="textPersonName"
+        android:textColor="#42210B"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView28" />
 
@@ -25,10 +28,11 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
-        android:fontFamily="cursive"
+        android:fontFamily="@font/montserrat"
         android:text="Select MRT Stations Here"
-        android:textColor="#673AB7"
+        android:textColor="#42210B"
         android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -44,14 +48,18 @@
 
     <Button
         android:id="@+id/submitSelectionButton"
+        android:background="@drawable/custom_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="sumbit selection"
+        android:fontFamily="@font/montserrat"
+        android:text="submit selection"
+        android:textColor="#42210B"
         android:textSize="10sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/selectMrtListView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/searchMrtEditText"
