--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/logo"
+    android:background="@drawable/jiowherebg"
     tools:context=".SignUpActivity">
 
 
@@ -21,6 +21,8 @@
             android:layout_gravity="center_horizontal"
             android:text="User Login"
             android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="#42210B"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -30,8 +32,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
+            android:fontFamily="@font/montserrat"
             android:hint="Email address"
-            android:inputType="textEmailAddress" />
+            android:inputType="textEmailAddress"
+            android:textColor="#42210B" />
 
 
         <EditText
@@ -39,25 +43,31 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
+            android:fontFamily="@font/montserrat"
             android:hint="Password"
-            android:inputType="textPassword" />
+            android:inputType="textPassword"
+            android:textColor="#42210B" />
 
 
         <Button
             android:id="@+id/buttonSignIn"
+            android:background="@drawable/custom_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
-            android:text="Sign In" />
+            android:text="Sign In"
+            android:textColor="#42210B"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/SignInText"
             android:layout_width="match_parent"
             android:layout_height="53dp"
             android:clickable="true"
+            android:fontFamily="@font/montserrat"
             android:text="No account? Sign Up here"
             android:textAlignment="center"
-            android:textColor="#3F51B5" />
+            android:textColor="#42210B" />
 
         <TextView
             android:id="@+id/resetPasswordLogin"
@@ -65,9 +75,10 @@
             android:layout_height="52dp"
             android:layout_centerHorizontal="true"
             android:clickable="true"
+            android:fontFamily="@font/montserrat"
             android:text="Forgot password? Reset here"
             android:textAlignment="center"
-            android:textColor="#3F51B5" />
+            android:textColor="#42210B" />
 
     </LinearLayout>
 
