--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -4,14 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/logo"
+    android:background="@drawable/jiowherebg"
     tools:context=".SignUpActivity">
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingTop="40dp"
         android:layout_centerInParent="true"
+        android:layout_centerHorizontal="true"
         android:orientation="vertical">
 
         <TextView
@@ -19,14 +21,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
+            android:fontFamily="@font/montserrat"
             android:text="User Registration"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="#42210B"
+            android:textStyle="bold" />
 
         <EditText
             android:id="@+id/emailResetPW"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
+            android:fontFamily="@font/montserrat"
             android:hint="Email address"
             android:inputType="textEmailAddress" />
 
@@ -36,6 +42,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
+            android:fontFamily="@font/montserrat"
             android:hint="Password"
             android:inputType="textPassword" />
 
@@ -45,33 +52,42 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
+            android:fontFamily="@font/montserrat"
             android:hint="Display Name "
             android:inputType="text" />
 
         <Button
             android:id="@+id/resetPwButton"
+            android:background="@drawable/custom_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
-            android:text="Register User" />
+            android:fontFamily="@font/montserrat"
+            android:text="Register User"
+            android:textColor="#42210B"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/SignInText"
             android:layout_width="match_parent"
             android:layout_height="43dp"
             android:clickable="true"
+            android:fontFamily="@font/montserrat"
             android:text="Already Registered? Sign in here"
             android:textAlignment="center"
-            android:textColor="#3F51B5" />
+            android:textColor="#42210B"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/resetPasswordSignup"
             android:layout_width="match_parent"
             android:layout_height="53dp"
             android:clickable="true"
+            android:fontFamily="@font/montserrat"
             android:text="Forgot password? Reset here"
             android:textAlignment="center"
-            android:textColor="#3F51B5" />
+            android:textColor="#42210B"
+            android:textStyle="bold" />
 
 
     </LinearLayout>
