--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -11,8 +11,8 @@
     <android.support.constraint.ConstraintLayout
         android:id="@+id/constraintLayout2"
         android:layout_width="match_parent"
-        android:layout_height="280dp"
-        android:background="@drawable/gradientbackground"
+        android:layout_height="0dp"
+        android:background="@drawable/bg1cut"
         android:orientation="vertical"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -55,10 +55,11 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="2dp"
                     android:layout_marginEnd="8dp"
-                    android:fontFamily="cursive"
+                    android:fontFamily="@font/montserrat"
                     android:text="User Profile"
-                    android:textColor="#9C27B0"
+                    android:textColor="#42210B"
                     android:textSize="30sp"
+                    android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -69,9 +70,11 @@
                     android:layout_height="26dp"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="16dp"
+                    android:fontFamily="@font/montserrat"
                     android:text="Email:"
-                    android:textColor="#673AB7"
+                    android:textColor="#42210B"
                     android:textSize="18sp"
+                    android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
@@ -81,9 +84,11 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
+                    android:fontFamily="@font/montserrat"
                     android:text="Display Name:"
-                    android:textColor="#673AB7"
+                    android:textColor="#42210B"
                     android:textSize="18sp"
+                    android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/hshshs" />
 
@@ -93,8 +98,11 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="16dp"
+                    android:fontFamily="@font/montserrat"
                     android:text="TextView"
+                    android:textColor="#A642210B"
                     android:textSize="18sp"
+                    android:textStyle="bold"
                     app:layout_constraintStart_toEndOf="@+id/textView8"
                     app:layout_constraintTop_toBottomOf="@+id/displayNameTextView" />
 
@@ -104,13 +112,15 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
+                    android:fontFamily="@font/montserrat"
                     android:text="TextView"
+                    android:textColor="#A642210B"
                     android:textSize="18sp"
+                    android:textStyle="bold"
                     app:layout_constraintStart_toEndOf="@+id/textView9"
                     app:layout_constraintTop_toBottomOf="@+id/hshshs" />
 
             </android.support.constraint.ConstraintLayout>
-
 
 
         </android.support.v7.widget.CardView>
@@ -124,10 +134,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="88dp"
         android:layout_marginTop="8dp"
-        android:fontFamily="cursive"
+        android:fontFamily="@font/montserrat"
         android:text="Saved Activities"
-        android:textColor="#9C27B0"
+        android:textColor="#42210B"
         android:textSize="30sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />
 
