--- a/app/src/main/res/layout/mrt_list_checkbox_layout.xml
+++ b/app/src/main/res/layout/mrt_list_checkbox_layout.xml
@@ -13,7 +13,10 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
+        android:fontFamily="@font/montserrat"
         android:text="CheckBox"
+        android:textColor="#42210B"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
